# FANN

./: .claude.json  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  ISSUE_69_SOLUTION_REPORT.md  README.md  claude_polyglot_benchmark.py  crates.js  deny.toml  help.html  package-lock.json  package.json  search-index.js  settings.html  src-files.js  start-mcp.sh  test-claude-integration.js  test-simd-fix.mjs  verify-simd-fix.mjs
neuro-divergent/: CAPABILITY_VALIDATION.md  Cargo.toml  PUBLISHING_INSTRUCTIONS.md  README.md  fix-common-issues.sh  publish-crates.sh  publish.sh
neuro-divergent/.github/workflows/: ci.yml
neuro-divergent/benches/: comparison_benchmarks.rs  data_processing_benchmarks.rs  inference_benchmarks.rs  model_benchmarks.rs  training_benchmarks.rs
neuro-divergent/docs/: ACCURACY_REPORT.md  PERFORMANCE.md  STRESS_TEST_REPORT.md
neuro-divergent/docs/api/: builders.md  configurations.md  core-traits.md  data-types.md  errors.md  evaluation.md  index.md  neural-forecast.md  training.md
neuro-divergent/docs/migration/: api-mapping.md  automation-tools.md  code-conversion.md  configuration-mapping.md  data-formats.md  deployment-guide.md  ecosystem-integration.md  index.md  installation-setup.md  model-equivalents.md  overview.md  performance-comparison.md  troubleshooting.md
neuro-divergent/docs/user-guide/: basic-concepts.md  best-practices.md  data-handling.md  faq.md  (+5 more)
neuro-divergent/examples/: advanced_features.rs  complete_workflow.rs  ensemble_forecasting.rs
neuro-divergent/neuro-divergent-core/: Cargo.toml  README.md
neuro-divergent/neuro-divergent-data/: Cargo.toml  README.md
neuro-divergent/neuro-divergent-models/: Cargo.toml  README.md
neuro-divergent/neuro-divergent-registry/: Cargo.toml  README.md
neuro-divergent/neuro-divergent-training/: Cargo.toml  README.md
neuro-divergent/plans/: 00-master-plan.md  01-codebase-analysis.md  02-api-reference.md  03-rust-architecture.md  04-api-design.md  05-model-architectures.md  06-model-implementation-plans.md  07-implementation-guide.md  08-user-migration-guide.md  09-development-roadmap.md
neuro-divergent/scripts/: generate_reference_data.py  migration_helper.py
neuro-divergent/src/: builders.rs  config.rs  errors.rs  lib.rs  neural_forecast.rs  results.rs  utils.rs
neuro-divergent/tests/: README.md  lib.rs  run_stress_tests.sh
ruv-swarm/: AGENT4_IMPLEMENTATION_REPORT.md  AGENT_TASK_BINDING_FIX_SUMMARY.md  COMPREHENSIVE_SYSTEM_ANALYSIS_REPORT.md  CRITICAL_ISSUES_SUMMARY.md  Cargo.toml  DAA_FIX_SUMMARY.md  DAA_INTEGRATION_COMPLETE.md  ERROR_HANDLING_IMPLEMENTATION_REPORT.md  FINAL_PERFORMANCE_VALIDATION_REPORT.md  FINAL_WASM_CONFIRMATION.md  FIXES_LOG.md  INTEGRATION_COMPLETION_REPORT.md  LICENSE-APACHE  LICENSE-MIT  LSTM_TRAINING_COMPLETE.md  MCP_TROUBLESHOOTING.md  PERFORMANCE_OPTIMIZATION_REPORT.md  QA_COMPREHENSIVE_VALIDATION_REPORT.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SWARM_COLLABORATION_GUIDE.md  TESTING_REPORT.md  TEST_INFRASTRUCTURE_REPORT.md  TEST_VALIDATION_REPORT.md  WASM_IMPLEMENTATION_COMPLETE.md  build-wasm-optimized.sh  publish-all-crates.sh  ruv-swarm.bat  test-execution-report.md  test-mcp-tools.js  test-simd-fix.mjs  test-wasm.js  vitest.config.js
ruv-swarm/benches/: agent_spawn_bench.rs  message_passing_bench.rs  orchestration_bench.rs  wasm_bench.rs
ruv-swarm/benchmarking/: Cargo.toml  README.md
ruv-swarm/docs/: AGENT2_COMPLETION_REPORT.md  API_REFERENCE.md  BENCHMARKS.md  CHANGELOG.md  DAA_MCP_TOOLS.md  DAA_SERVICE_DOCUMENTATION.md  FORECASTING_IMPLEMENTATION.md  MCP_RESOURCES.md  MCP_USAGE.md  NEURAL_INTEGRATION.md  README.md  progress-tracking-v1.0.11.md
ruv-swarm/examples/: README.md  basic_swarm.rs  cognitive_diversity.rs  daa-service-demo.js  fibonacci_demo.rs  forecasting_demo.rs  neural_swarm_integration.rs  neural_training.rs  wasm_swarm_demo.js
ruv-swarm/guide/: README.md
ruv-swarm/ml-training/: Cargo.toml  README.md
ruv-swarm/models/: README.md  hyperparameter_optimizer.py  optimization_requirements.txt
ruv-swarm/npm/: .eslintrc.json  .gitignore  .npmignore  .prettierrc  .ruv-swarm.db  CHANGELOG.md  COGNITIVE_DIVERSITY_ANALYSIS.md  Dockerfile.alpine.test  Dockerfile.mcp.test  Dockerfile.node20.test  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  MIGRATION-v1.0.5-to-v1.0.6.md  PR-DESCRIPTION-v1.0.6.md  README.md  RELEASE-VALIDATION-v1.0.6.md  TECHNICAL_WRITER_COMPLETION_REPORT.md  TEST_COVERAGE_CHAMPION_COMPLETION_REPORT.md  babel.config.cjs  claude-swarm.sh  claude.md  coverage-data.json  coverage-history.json  docker-compose.final-test.yml  docker-compose.test.yml  eslint.config.js  jest-wasm-transformer.cjs  jest.config.cjs  jest.config.js  mcp-server.sh  package-lock.json  package.json  rollup.config.js  ruv-swarm.config.json  test-db-updates.js  test-flags.js  test-mcp-db.js  test-mcp-fixes.js  test-mcp-persistence.js  test-memory-storage.js  (+7 more)
ruv-swarm/plans/: claude-commands-ruv-swarm.md  claude-task-example.md  mcp-swarm-tools.md  neuro-divergent-integration.md  persistence-architecture.md  ruv-fann-swarm-analysis.md  ruv-swarm-architecture.md  ruv-swarm-summary.md  swarm-command-control.md  swarm-tdd-specifications.md  wasm-compilation-strategy.md
ruv-swarm/scripts/: build-forecasting-wasm.sh  build-neural-wasm.sh  lstm_training_simulator.py  optimize-wasm.sh  publish-npm.sh  publish-rust.sh  run-integration-tests.sh  swarm-helper.sh  train_lstm_coding_optimizer.py  validate-wasm-integration.sh
ruv-swarm/test/: claude-cli-orchestration-test.sh  claude-integration-test.sh  deep-analysis-plan.md  mcp-protocol-validation-report.json  mcp-protocol-validation.js  swarm-topology-validation.js  test-actual-wasm.js  validate-mcp-functionality.js  verify-complete-functionality.sh  wasm-performance-benchmark.js
ruv-swarm/tests/: INTEGRATION_TEST_SUMMARY.md  README.md  chaos_testing.rs  cognitive_diversity.rs  daa_tests.rs  failure_scenarios.rs  integration_test.rs  mod.rs  performance_benchmarks.rs  persistence_integration.rs  swarm_integration.rs  swarm_orchestration_test.rs  topology_stress_test.rs
(+1709 files in other folders)
