[package]
name = "ruv-fann"
version = "0.1.2"
edition = "2021"
authors = ["rUv Contributors"]
description = "A pure Rust implementation of the Fast Artificial Neural Network (FANN) library"
repository = "https://github.com/ruvnet/ruv-FANN"
license = "MIT OR Apache-2.0"
keywords = ["neural-network", "machine-learning", "fann", "ai", "deep-learning"]
categories = ["science", "algorithms", "mathematics"]

[workspace]
# This makes this package a standalone workspace, not part of the parent workspace

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
num-traits = "0.2"

# Parallel processing
rayon = { version = "1.8", optional = true }

# Random number generation
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Logging
log = { version = "0.4", optional = true }

# I/O and serialization
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.0", optional = true }

# Additional dependencies for our implementation
num_cpus = { version = "1.16", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
pretty_assertions = "1.4"

[features]
default = ["std", "serde", "parallel", "binary", "compression", "logging", "io"]
std = []
serde = ["dep:serde", "dep:serde_json"]
parallel = ["dep:rayon", "dep:num_cpus", "std"]
logging = ["dep:log", "std"]
simd = []
binary = ["dep:bincode"]
compression = ["dep:flate2"]
io = ["binary", "compression", "serde"]

# no_std support
no_std = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
