[package]
name = "ruv-fann"
version = "0.1.6"
edition = "2021"
rust-version = "1.70"
authors = ["rUv Contributors"]
description = "A pure Rust implementation of the Fast Artificial Neural Network (FANN) library"
repository = "https://github.com/ruvnet/ruv-FANN"
license = "MIT OR Apache-2.0"
keywords = ["neural-network", "machine-learning", "fann", "ai", "deep-learning"]
categories = ["science", "algorithms", "mathematics"]
exclude = [
    "node_modules/**",
    ".git/**",
    ".claude/**",
    ".vscode/**",
    "target/**",
    "*.lock",
    "*.log",
    "tmp/**",
    "claude-code-flow/**",
    "ruv-swarm/npm/node_modules/**",
    "ruv-swarm/npm/.nyc_output/**",
    "ruv-swarm/npm/coverage/**",
    "ruv-swarm/target/**",
    "*.wasm",
    "*.onnx",
    "*.pt",
    "*.pth",
    "*.safetensors",
    "*.bin",
    ".claude.json",
    "ruv-swarm/npm/**",
    "*.o",
    "*.a",
    "*.so",
    "*.dylib",
    "*.dll",
    "benchmarks/**",
    "docs/**",
    "examples/**",
    "tests/**",
    ".github/**",
    ".gitignore",
    ".gitmodules",
    "ruv-swarm/**"
]

[workspace]
# This makes this package a standalone workspace, not part of the parent workspace
exclude = ["neuro-divergent"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
num-traits = "0.2"

# Parallel processing
rayon = { version = "1.8", optional = true }

# Random number generation
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Logging
log = { version = "0.4", optional = true }

# I/O and serialization
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.0", optional = true }

# Additional dependencies for our implementation
num_cpus = { version = "1.16", optional = true }

# GPU acceleration dependencies
wgpu = { version = "0.19", optional = true }
futures = { version = "0.3", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["rt", "sync", "time"], optional = true }
async-trait = { version = "0.1", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
  "Window", "console", "Performance", "Navigator", "Worker", "MessageChannel", "MessagePort",
  "HtmlCanvasElement", "BroadcastChannel", "ServiceWorkerContainer",
  "Gpu", "GpuAdapter", "GpuDevice", "GpuQueue", "GpuBuffer", "GpuTexture", "GpuBindGroup",
  "GpuCanvasContext", "GpuCommandEncoder", "GpuComputePassEncoder", "GpuComputePipeline",
  "MessageEvent", "Storage", "GpuRequestAdapterOptions", "GpuPowerPreference", "GpuDeviceDescriptor",
  "Document", "Element", "CanvasRenderingContext2d", "ImageData"
], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
pretty_assertions = "1.4"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time", "process", "sync", "fs"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["std", "serde", "parallel", "binary", "compression", "logging", "io"]
std = []
serde = ["dep:serde", "dep:serde_json"]
parallel = ["dep:rayon", "dep:num_cpus", "std"]
logging = ["dep:log", "std"]
simd = []
binary = ["dep:bincode"]
compression = ["dep:flate2"]
io = ["binary", "compression", "serde"]

# no_std support
no_std = []

# WASM support
wasm = ["no_std", "serde", "logging", "dep:wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:console_error_panic_hook", "dep:wasm-bindgen-futures"]

# GPU acceleration support
gpu = ["dep:wgpu", "dep:futures", "dep:pollster", "dep:bytemuck", "dep:tokio", "dep:async-trait", "std"]
webgpu = ["dep:wgpu", "dep:futures", "dep:bytemuck", "wasm"]
wasm-gpu = ["webgpu", "wasm"]

# Swarm integration - external features that may not be available
ruv-swarm = []
ruv-swarm-daa = ["ruv-swarm"]
benchmarking = []

# Test configurations
test-all = ["gpu", "ruv-swarm", "ruv-swarm-daa", "benchmarking"]
test-core = ["std", "parallel"]
test-gpu = ["gpu", "webgpu"]
test-no-external = []  # For tests that don't require external crates

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
