[package]
name = "neuro-divergent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core foundation for neuro-divergent neural forecasting library"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core numeric types and traits
num-traits.workspace = true
num-complex.workspace = true

# Date and time handling
chrono.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Data structures and processing
ndarray.workspace = true
polars.workspace = true

# Parallel processing
rayon.workspace = true

# Random number generation
rand.workspace = true
rand_distr.workspace = true

# Mathematical operations
nalgebra.workspace = true

# ruv-FANN integration
ruv-fann.workspace = true

# Optional GPU acceleration
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
doc-comment.workspace = true

[features]
default = ["std"]
std = []
gpu = ["candle-core", "candle-nn"]
all = ["std", "gpu"]

[lib]
name = "neuro_divergent_core"
path = "src/lib.rs"
doctest = true

[[bench]]
name = "core_benchmarks"
harness = false