[package]
name = "neuro-divergent-core"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <noreply@anthropic.com>"]
license = "MIT OR Apache-2.0"
description = "Core foundation for neuro-divergent neural forecasting library"
repository = "https://github.com/your-org/ruv-FANN"
homepage = "https://github.com/your-org/ruv-FANN"
documentation = "https://docs.rs/neuro-divergent-core"
keywords = ["neural-network", "forecasting", "time-series", "machine-learning", "rust"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
# Core numeric types and traits
num-traits = "0.2"
num-complex = "0.4"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures and processing
ndarray = "0.15"
polars = { version = "0.35", features = ["lazy", "temporal", "csv", "parquet", "json"] }

# Parallel processing
rayon = "1.8"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Mathematical operations
nalgebra = "0.32"

# ruv-FANN integration
ruv-fann = "0.1"

# Optional GPU acceleration
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"

[features]
default = ["std"]
std = []
gpu = ["candle-core", "candle-nn"]
all = ["std", "gpu"]

[lib]
name = "neuro_divergent_core"
path = "src/lib.rs"
doctest = true

