[package]
name = "neuro-divergent-models"
version = "0.1.0"
edition = "2021"
authors = ["rUv Contributors"]
description = "Neural forecasting models implemented using ruv-FANN for time series forecasting"
repository = "https://github.com/ruvnet/ruv-FANN"
license = "MIT OR Apache-2.0"
keywords = ["neural-network", "time-series", "forecasting", "lstm", "rnn"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
# Core ruv-FANN dependency
ruv-fann = "0.1"

# Essential dependencies
num-traits = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Time series and data handling
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.35", features = ["lazy", "temporal", "csv", "parquet"], optional = true }

# Mathematical operations
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = { version = "0.32", optional = true }

# Parallel processing
rayon = { version = "1.8", optional = true }

# Random number generation
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rand_chacha = "0.3"

# Logging
log = "0.4"

# Serialization
bincode = "1.3"

# Testing and development
approx = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
pretty_assertions = "1.4"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["std", "serde", "polars"]
std = []
serde = ["dep:serde", "dep:serde_json", "ruv-fann/serde"]
polars = ["dep:polars"]
nalgebra = ["dep:nalgebra"]
parallel = ["dep:rayon", "ruv-fann/parallel"]
testing = ["dep:approx"]

# Specialized model features
recurrent = []
transformer = []
specialized = []

[[example]]
name = "basic_lstm"
path = "examples/basic_lstm.rs"

[[example]]
name = "time_series_forecasting"
path = "examples/time_series_forecasting.rs"

