[package]
name = "neuro-divergent-registry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Model factory and registry system for dynamic neural network model creation and management"
keywords = ["neural-networks", "forecasting", "machine-learning", "registry", "factory"]
categories = ["algorithms", "science"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections and utilities
indexmap = "2.0"
once_cell = "1.19"
parking_lot = "0.12"

# Async support
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

# Logging
log = "0.4"
tracing = "0.1"

# Dynamic loading
libloading = { version = "0.8", optional = true }

# Configuration
config = "0.14"
toml = "0.8"

# Hashing
ahash = "0.8"
sha2 = "0.10"

# Benchmarking
criterion = { version = "0.5", optional = true }
instant = "0.1"

# Math and numerics
num-traits = "0.2"

# Path handling
dirs = "5.0"
walkdir = "2.4"

# Compression for model storage
flate2 = "1.0"
tar = "0.4"

[features]
default = ["std"]
std = []
async = ["tokio", "futures"]
benchmarks = ["criterion"]
plugin-system = ["libloading"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
env_logger = "0.10"


[lib]
name = "neuro_divergent_registry"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]