[package]
name = "neuro-divergent-training"
version = "0.1.0"
edition = "2021"
authors = ["rUv Contributors"]
description = "Comprehensive training infrastructure for neural forecasting models"
repository = "https://github.com/ruvnet/ruv-FANN"
license = "MIT OR Apache-2.0"
keywords = ["neural-network", "forecasting", "training", "machine-learning", "time-series"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
# Internal dependencies
neuro-divergent-core = { version = "0.1.0", path = "../neuro-divergent-core" }
# Core dependencies
ruv-fann = "0.1"
num-traits = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Parallel processing
rayon = { version = "1.8", optional = true }

# Random number generation
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Logging
log = { version = "0.4", optional = true }

# Additional numerical computing
approx = "0.5"

# SIMD support
wide = { version = "0.7", optional = true }

# Memory optimization
memmap2 = { version = "0.9", optional = true }

# Checkpointing and serialization
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"
pretty_assertions = "1.4"

[features]
default = ["std", "serde", "parallel", "logging", "simd", "checkpointing"]
std = []
serde = ["dep:serde", "dep:serde_json"]
parallel = ["dep:rayon", "std"]
logging = ["dep:log", "std"]
simd = ["dep:wide"]
checkpointing = ["dep:bincode", "dep:flate2", "dep:memmap2"]
mixed_precision = []

