[package]
name = "ruv-swarm-benchmarking"
version = "1.0.5"
edition = "2021"
authors = ["RUV-SWARM Team"]
description = "Comprehensive benchmarking framework for Claude Code CLI and swarm orchestration"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Metrics and analysis
statrs = "0.17"
ndarray = "0.15"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Process execution and stream parsing
futures = "0.3"
tokio-stream = "0.1"
pin-project = "1.0"

# Real-time monitoring
crossbeam-channel = "0.5"
dashmap = "5.5"

# HTTP server for real-time dashboard
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Configuration
config = "0.13"

# Local crates
ruv-swarm-core = { path = "../crates/ruv-swarm-core", version = "1.0.5" }
ruv-swarm-persistence = { path = "../crates/ruv-swarm-persistence", version = "1.0.5" }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["async_tokio"] }
pretty_assertions = "1.4"
mockall = "0.12"

[features]
default = ["real-time-monitoring"]
real-time-monitoring = []
advanced-analytics = []