[package]
name = "ruv-swarm-ml-training"
version = "1.0.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Advanced ML training pipeline for neuro-divergent models in RUV Swarm"

[dependencies]
# Core dependencies
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros", "time", "rt"] }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Data structures
dashmap = { workspace = true }

# Logging
tracing = { workspace = true }

# Math and statistics
ndarray = { version = "0.15", optional = true }
nalgebra = { version = "0.32", optional = true }
statrs = { version = "0.16", optional = true }

# Machine learning (placeholder for actual ML framework)
# candle-core = { version = "0.3", optional = true }
# candle-nn = { version = "0.3", optional = true }

# Time series specific
# tslearn = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
full = ["serde", "ndarray", "nalgebra", "statrs"]
# ml-backend = ["candle-core", "candle-nn"]

[lib]
name = "ruv_swarm_ml_training"
path = "src/lib.rs"

[[bench]]
name = "training_pipeline"
harness = false

[[example]]
name = "basic_training"
path = "examples/basic_training.rs"

[[example]]
name = "hyperparameter_search"
path = "examples/hyperparameter_search.rs"

[[example]]
name = "model_comparison"
path = "examples/model_comparison.rs"

[[example]]
name = "swarm_coordinator_training"
path = "examples/swarm_coordinator_training.rs"