[package]
name = "claude-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
insta = "1.34"
tempfile = "3.8"