[package]
name = "claude-parser"
version = "1.0.5"
edition = "2021"
description = "Claude Code CLI stream-JSON parser for ruv-swarm multi-agent orchestration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruv-FANN"
homepage = "https://github.com/ruvnet/ruv-FANN/tree/main/ruv-swarm"
documentation = "https://docs.rs/claude-parser"
keywords = ["claude", "parser", "json", "stream", "ai"]
categories = ["parsing", "development-tools", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
insta = "1.34"
tempfile = "3.8"