[package]
name = "ruv-swarm-agents"
version = "1.0.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Specialized AI agents for RUV Swarm"

[dependencies]
ruv-swarm-core = { path = "../ruv-swarm-core", version = "1.0.6" }